--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,7 @@
 <body>
 {{>header}}
 <p>{{name}}</p>
-
+<p>This site was created by Saksham . It uses data from mapbox and weather-stack</p>
 {{>footer}}
     </body>
 </html>
