Getting user's current location

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,6 +13,8 @@
 {{!-- <label for="address" style="font-size: larger;color:black">Type the address of the location</label><br> --}}
 <input id="address" type="text" placeholder="Type the address of the location" size="50">
 <button>Search</button>
+
+<div class="getcurrentlocation">Get your current location</div>
 <br>
 <p id="id1"></p>
 <p id="id2"></p>
