--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,22 @@ p{
 button{
     cursor: pointer;
 }
+
+div.getcurrentlocation{
+    display: inline-block;
+    width: auto;
+    cursor: pointer;
+    padding: 5px;
+    font-family: -webkit-pictograph;
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    /* float: right; */
+    margin-right: 3rem;
+    box-shadow: 2px 2px 7px black , 2px 2px 7px black;
+
+}
+
+div.getcurrentlocation:hover{
+    box-shadow: 5px 5px 7px black , 5px 5px 7px black;
+}
